@@ -1,4 +1,4 @@
-package org.apache.lucene.index;
+package org.apache.lucene.store;
 
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
@@ -20,10 +20,10 @@ package org.apache.lucene.index;
 import java.io.IOException;
 import java.nio.file.Path;
 
-import org.apache.lucene.index.SleepingLockWrapper;
 import org.apache.lucene.store.BaseLockFactoryTestCase;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.SingleInstanceLockFactory;
+import org.apache.lucene.store.SleepingLockWrapper;
 import org.apache.lucene.util.TestUtil;
 
 /** Simple tests for SleepingLockWrapper */
